<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".merkinta">

    <TextView
        android:id="@+id/vanhat_merkinnat_text2"
        android:layout_width="253dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:text="@string/merkinta_otsikko"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pvm_otiskko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"

        android:fontFamily="@font/raleway"
        android:text="@string/pvm_otsikko"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/aika_otsikko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"

        android:fontFamily="@font/raleway"
        android:text="@string/aika_otsikko"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/pvm_otiskko"
        app:layout_constraintStart_toEndOf="@+id/pvm_otiskko" />

    <TextView
        android:id="@+id/laakkeet_otsikko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"

        android:fontFamily="@font/raleway"
        android:text="@string/laakkeet_otsikko"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_date" />

    <TextView
        android:id="@+id/kipu_otsikko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"

        android:fontFamily="@font/raleway"
        android:text="@string/kipu_otsikko"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibuprofeeni" />

    <TextView
        android:id="@+id/lisatietoja_otsikko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"

        android:fontFamily="@font/raleway"
        android:text="@string/Lisatietoja_otsikko"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kipumittari1" />

    <Button
        android:id="@+id/tallenna_merkinta"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"

        android:layout_marginBottom="24dp"
        android:background="@drawable/corner_rad"
        android:fontFamily="@font/raleway"
        android:onClick="tallenna_merkinta"

        android:text="@string/tallenna_merkintä"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_lisatietoja" />

    <EditText
        android:id="@+id/pick_date"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"

        android:autofillHints="@android:string/autofill"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/raleway"
        android:hint="@android:string/autofill"
        android:inputType="date"

        android:outlineSpotShadowColor="#000000"
        android:text="@string/päivämäärä_placehold"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/pvm_otiskko" />

    <EditText
        android:id="@+id/set_lisatietoja"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:autofillHints="@android:string/autofill"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/lisatietoja_placeholder"

        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lisatietoja_otsikko" />

    <EditText
        android:id="@+id/time_loppu"
        android:layout_width="72dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"

        android:autofillHints="@android:string/autofill"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="@font/raleway"
        android:hint="@android:string/autofill"

        android:inputType="time"
        android:text="@string/time_picker"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBaseline_toBaselineOf="@+id/time_alku"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <EditText
        android:id="@+id/time_alku"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"

        android:autofillHints="@android:string/autofill"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="@font/raleway"
        android:hint="@android:string/autofill"

        android:inputType="time"
        android:text="@string/time_picker"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBaseline_toBaselineOf="@+id/pick_date"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/viiva_1"
        android:layout_width="15dp"
        android:layout_height="7dp"
        android:layout_marginTop="34dp"

        android:layout_marginEnd="4dp"

        android:contentDescription="@string/aika_valinta_viiva"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/time_alku"
        app:layout_constraintTop_toBottomOf="@+id/aika_otsikko"
        app:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <CheckBox
        android:id="@+id/ibuprofeeni"
        android:layout_width="117dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"

        android:buttonTint="#FFFFFF"
        android:fontFamily="@font/raleway"
        android:text="@string/Ibuprofeeni"
        android:textColor="#FFFFFF"

        app:layout_constraintEnd_toStartOf="@+id/parasetamoli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laakkeet_otsikko" />

    <CheckBox
        android:id="@+id/parasetamoli"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginEnd="1dp"
        android:buttonTint="#FFFFFF"

        android:fontFamily="@font/raleway"
        android:text="@string/Parasetamoli"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/ibuprofeeni"
        app:layout_constraintEnd_toStartOf="@+id/tasmalaake"
        app:layout_constraintStart_toEndOf="@+id/ibuprofeeni" />

    <CheckBox
        android:id="@+id/tasmalaake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:buttonTint="#FFFFFF"

        android:fontFamily="@font/raleway"
        android:text="@string/Täsmälääke"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/parasetamoli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/parasetamoli" />

    <SeekBar
        android:id="@+id/kipumittari"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="362dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"

        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:indeterminateTint="#FFC107"
        android:max="4"
        android:min="0"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:progress="0"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FFFFFF"
        android:secondaryProgressTint="#FFFFFF"
        android:thumbTint="#FFFFFF"
        android:tickMarkTint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kipu_otsikko" />

    <TextView
        android:id="@+id/kipumittari1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:fontFamily="@font/raleway"
        android:text="@string/kipumittari1"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kipumittari" />

    <TextView
        android:id="@+id/kipumittari2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/kipumittari2"

        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/kipumittari1"
        app:layout_constraintTop_toBottomOf="@+id/kipu_otsikko" />

    <TextView
        android:id="@+id/kipumittari3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:fontFamily="@font/raleway"
        android:text="@string/kipumittari3"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/kipumittari1"
        app:layout_constraintStart_toEndOf="@+id/kipumittari2" />

    <TextView
        android:id="@+id/kipumittari4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:fontFamily="@font/raleway"
        android:text="@string/kipumittari4"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/kipumittari2"
        app:layout_constraintStart_toEndOf="@+id/kipumittari3" />

    <TextView
        android:id="@+id/kipumittari5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/raleway"
        android:text="@string/kipumittari5"
        android:textColor="#FFFFFF"

        app:layout_constraintBaseline_toBaselineOf="@+id/kipumittari3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/kipumittari4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintGuide_begin="61dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="76dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"

        android:contentDescription="@string/image_meta"
        android:radius="30dp"

        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/aika_otsikko"
        app:srcCompat="@color/transparent_white" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:layout_marginEnd="42dp"

        android:contentDescription="@string/image_meta"
        android:radius="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/viiva_1"
        app:layout_constraintTop_toTopOf="@+id/time_loppu"
        app:srcCompat="@color/transparent_white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"

        android:contentDescription="@string/image_meta"
        android:radius="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pvm_otiskko"
        app:srcCompat="@color/transparent_white" />

</android.support.constraint.ConstraintLayout>