<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/kalenteri_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_meta"
        android:onClick="kalenteri_icon"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/saa_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/iconscal02" />

    <ImageView
        android:id="@+id/saa_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image_meta"
        android:onClick="saa_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kalenteri_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/iconsmain03" />

    <ImageView
        android:id="@+id/vikamerkinta_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image_meta"
        android:onClick="viime_merkinta_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uusi_merkinta_icon"
        app:layout_constraintTop_toBottomOf="@+id/saa_icon"
        app:srcCompat="@drawable/iconsmain04" />

    <ImageView
        android:id="@+id/uusi_merkinta_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginStart="8dp"
        android:contentDescription="@string/image_meta"
        android:onClick="merkinta_icon"
        app:layout_constraintEnd_toStartOf="@+id/vikamerkinta_icon"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/kalenteri_icon"
        app:srcCompat="@drawable/iconsmain05" />

    <TextView
        android:id="@+id/viime_merkinta_arvo"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"

        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:text="@string/viime_merkinta_def_arvo"
        android:textColor="#90FFFFFF"
        android:textSize="26sp"

        app:layout_constraintBottom_toBottomOf="@+id/vikamerkinta_icon"
        app:layout_constraintEnd_toEndOf="@+id/vikamerkinta_icon"
        app:layout_constraintStart_toEndOf="@+id/uusi_merkinta_icon"
        app:layout_constraintTop_toTopOf="@+id/vikamerkinta_icon" />

    <ImageView
        android:id="@+id/imageView_round"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:contentDescription="@string/def_empty"
        android:onClick="pikaMerkinta"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uusi_merkinta_icon"
        app:srcCompat="@drawable/buttround" />

    <TextView
        android:id="@+id/ilmanpaine_main"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:textAlignment="center"
        android:textColor="#90FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="@+id/saa_icon"
        app:layout_constraintEnd_toEndOf="@+id/saa_icon"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/kalenteri_icon"
        app:layout_constraintTop_toTopOf="@+id/saa_icon"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/hpa_text"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="55dp"

        android:fontFamily="@font/raleway"
        android:text="@string/hpa_merkki"
        android:textAlignment="center"
        android:textColor="#90FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/vikamerkinta_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ilmanpaine_main"
        app:layout_constraintTop_toTopOf="@+id/saa_icon"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="46dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="46dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="401dp" />

    <TextView
        android:id="@+id/textView_pika"
        android:layout_width="111dp"
        android:layout_height="52dp"

        android:fontFamily="@font/raleway"
        android:text="@string/pikamerkinta"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#95FFFFFF"
        android:textSize="18sp"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="@+id/imageView_round"
        app:layout_constraintEnd_toEndOf="@+id/imageView_round"
        app:layout_constraintStart_toStartOf="@+id/imageView_round"
        app:layout_constraintTop_toTopOf="@+id/imageView_round" />

</android.support.constraint.ConstraintLayout>